[package]
name = "bam3d"
version = "0.1.0"
authors = ["Dallas Coble <dallascoble@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = {version = "0.8", features = ["scalar-math"] }
rand = "0.7"
smallvec = "1.4"
bit-set = "0.5"
serde = { version = "1.0", optional = true, features = ["derive"] }